# gli-international

./: .gitignore  DEPLOYMENT_GUIDE.md  HOMEPAGE_SETUP.md  QUICKSTART.md  README.md  docker-compose.yml  netlify.toml
.claude/: settings.local.json
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: admin.py  auth.py  formations.py  payments.py  users.py
backend/app/core/: config.py  security.py
backend/app/schemas/: formation.py  payment.py  user.py
backend/app/services/payment/: __init__.py  bog_client.py
database/: README.md  schema.sql
docs/: ARCHITECTURE.md  DEPLOYMENT.md  I18N.md
frontend/: .env.local.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/messages/en/: common.json
frontend/messages/fr/: common.json
frontend/messages/ka/: common.json
frontend/public/: georgia.avif
frontend/src/: i18n.ts  middleware.ts
frontend/src/app/: globals.css
frontend/src/app/[locale]/: layout.tsx  page.tsx
frontend/src/app/[locale]/formations/: page.tsx
frontend/src/app/[locale]/formations/[id]/: page.tsx
frontend/src/app/[locale]/formations/[id]/checkout/: page.tsx
frontend/src/components/: Footer.tsx  Header.tsx
frontend/src/components/formations/: SeminarCard.tsx
frontend/src/components/home/: AboutSection.tsx  ContactSection.tsx  FormationCard.tsx  FormationsSection.tsx  HeroSection.tsx  ScrollIndicator.tsx
frontend/src/hooks/: useScrollAnimation.ts
frontend/src/types/: index.ts
